# rfc5051

./: Makefile  MkUnicodeData.hs  README.md  changelog.md  rfc5051.cabal
Data/: RFC5051.hs
Data/RFC5051/: TH.hs  Types.hs  UnicodeData.hs
src/Data/: RFC5051.hs
src/Data/RFC5051/: UnicodeData.hs
test/: Main.hs
