name:                rfc5051
version:             0.1.0.0
synopsis:            Simple unicode collation as per RFC5051.
description:
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           (C) 2013 John MacFarlane
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Data.RFC5051
  build-depends:     base ==4.5.*, containers ==0.4.*
